--- a/resume.tex
+++ b/resume.tex
@@ -245,6 +245,10 @@ IT Constructs :           &  Data Structures and Algorithms, Object Oriented Pro
 % Won first prize in Web Development Week ReactJs quiz contest conducted by GDSC IIIT Bhopal.\\
 % {\textit {Skills Used: ReactJs}}  \hfill 2022\\
 
+\textbf{Tech Competition} \hfill NIIMACK IIIT Bhopal\\
+I was in top 25 in Edge'23 Tech Competition associated with KIMO, a Dutch Company conducted by IIIT Bhopal.\\
+{\textit {Skills Used: Programming, Artificial Intelligence}}  \hfill 2023\\
+
 % \vspace{2mm}
 % \header{Hobbies and Interests}
 % I enjoy playing football, cricket and watching movies as my hobbies.\\
