--- a/resume.tex
+++ b/resume.tex
@@ -113,7 +113,12 @@
 \begin{center}
 	{\Huge \scshape {Shubh kesarwani}}\\
 	\vspace{2mm}
-	India $\cdot$ shubhkesarwani242@gmail.com $\cdot$ +91 9919713168 $\cdot$ \href{https://github.com/Shubhkesarwani02}{GitHub} $\cdot$ \href{https:/www.linkedin.com/in/shubh-kesarwani-537b30256/}{Linkedin} \\
+\href{mailto:shubhkesarwani242@gmail.com}{shubhkesarwani242@gmail.com}$\cdot$ 
++91 9919713168 $\cdot$
+\href{https://leetcode.com/u/Shubhkesarwani02/}{Leetcode} $\cdot$
+\href{https://www.codechef.com/users/shubhkesarwani}{Codechef} $\cdot$ 
+\href{https://codeforces.com/profile/Shubhkesarwani02}{Codeforces} $\cdot$
+\href{https://github.com/Shubhkesarwani02}{GitHub} $\cdot$ \href{https:/www.linkedin.com/in/shubh-kesarwani-537b30256/}{Linkedin}\\
 \end{center}
 
 \begin{center}
@@ -123,135 +128,77 @@
 %==== Education ====%
 \header{Education}
 \vspace{0mm}
-\textbf{Indian Institute of Information Technology}\hfill Bhopal\\
-BTech-Information Technology \hfill November 2022 - Present\\
-
-\textbf{Relevant Coursework}\\
-Analysis of Algorithm $\cdot$ Advanced Engineering Maths $\cdot$ Descrete Structures $\cdot$ Object Oriented Programming.\\
+\textbf{Indian Institute of Information Technology, Bhopal}\hfill Bhopal, MP\\
+Bachelor of Technology - Information Technology \textit{CGPA: 7.76}\hfill November 2022 - Present\\
 \vspace{4mm}
- 
-% \header{Position of Responsibility }
-% \vspace{0mm}
 
-% \textbf{GNU/Linux Users Club} \hfill IIIT Bhopal \\
-% \textit{Club Secretary} \hfill August 2022 - Present\\
-% \vspace{-2.5mm}
-% \begin{itemize} \itemsep 1pt
-% 	\item Using MacOS as my main distribution but I also have experience in most Debian based (Ubuntu), Fedora and Arch based Distributions
-% 		\item Guiding batch mates to install and use Linux distributions comfortably. Also in-charge of troubleshooting problems for them. 
-% \end{itemize}
+\header{Achievements}
+\vspace{-2mm}
+\begin{itemize}
+    \item \textbf{CodeChef:} Secured \textbf{95th} out of \textbf{3,300+} (Starters 132 Div 3) and \textbf{146th} out of \textbf{4,600+} (Starters 129 Div 3), demonstrating strong algorithmic proficiency
+    
+    \item \textbf{Competitive Programming:} Achieved \textbf{3* CodeChef} (Peak Rating: \textbf{1624}) and solved \textbf{1,000+} Data Structures and Algorithms (DSA) problems, including \textbf{Linked Lists, Trees, Graphs, and Dynamic Programming (DP)}
+    
+    \item \textbf{LeetCode:} Ranked in the \textbf{Top 2.5\%} globally, securing \textbf{736th} out of \textbf{30,000+} in \textbf{LeetCode Weekly Contest 437} (Peak Rating: \textbf{1744})
+    
+    \item \textbf{Graph Algorithm Contest:} Attained \textbf{5th} rank out of \textbf{200+} in an \textbf{Algo University intra-college competition}, showcasing expertise in \textbf{graph algorithms and data structure optimization}
+    
+    \item \textbf{Edge'23 (IIIT Bhopal):} Achieved \textbf{25th} out of \textbf{250+} in the \textbf{Kimo coding challenge}, competing against top university programmers
+    
+    \item \textbf{Coderush (IIIT Bhopal):} Earned \textbf{28th} rank out of \textbf{250+} in an \textbf{inter-college coding competition}, demonstrating efficiency in competitive programming
+\end{itemize}   
 
 \vspace{-2mm}
-\header{Professional Experience}
-
-{\textbf{CodSoft}}\hfill Oct 2023 - Present \\
- {\textit{Frontend Development Intern }}  \
-\vspace{-2.5mm}
-\begin{itemize} 
-\item Developed a solid foundation in frontend web development, including HTML, CSS, and JavaScript.
-\vspace{-2mm}
-\item Enhanced my understanding of UI/UX design principles and responsive design.
-\vspace{-2mm}
-\item Gained hands-on experience with modern web development frameworks and libraries.
-\vspace{-2mm}
-\item Learned to meet project deadlines and manage multiple tasks simultaneously.
-\vspace{-2mm}
-\item Built a portfolio of web projects that showcase my skills and growth as a frontend developer.
-\end{itemize}
-
-% {\textbf{Graviti }}\hfill October 2022 - June 2023 \\
-%  {\textit{Backend Intern }}  \
-% \vspace{-2.5mm}
-% \begin{itemize} 
-% \item Oversee back-end development using NestJS to maintain application integrity, security and efficiency.
-% \vspace{-2mm}
-% \item Utilize technologies such as TypeScript, PostgreSQL, TypeORM \& Docker to improve 
-% codebase quality and increase stability.
-% \vspace{-2mm}
-% \item Improved databases and table structures following architecture methodology for database-driven web application.
-% \vspace{-2mm}
-% \item Migrated from Heroku to AWS, containerised the application using Docker and Docker Compose while creating necessary scripts wherever needed. 
-% \vspace{-2mm}
-% \item Setup monitoring over Nginx to capture API requests of over 80 controllers and an average of 50k active series reducing it to 10k without affecting the existing source code and create health checks as well as monitoring the node server in the process.
-% \end{itemize}
-
-% {\textbf{Muzzo }}\hfill October 2022 - December 2022 \\
-%  {\textit{Software Development Intern - Backend}}  \
-% \vspace{-2.5mm}
-% \begin{itemize} 
-% \item Maintain legacy code using NodeJS, MongoDB \& Docker to improve production stability. 
-% \vspace{-2mm}
-% \item Redeveloped existing software architecture to improve performance and scalability using Django, Docker \& AWS.
-% \vspace{-2mm}
-% \item Designed \& developed databases and table structures with PostgreSQL.
-% \end{itemize}
 
 \header{Projects}
 
-{\textbf{NewsMonkey}} \hfill July 2023 \\
+{\textbf{CommX}}\\
 \vspace{-1mm}
-\url{https://github.com/Shubhkesarwani02/react-newsmonkey/} \\
+\url{https://github.com/Shubhkesarwani02/CommX/} \\
 \vspace{-2mm}
-\begin{itemize} 
-	\item Developed a dynamic React-based web application that fetches and displays the latest news articles from a variety of desired categories via external APIs.
-    \item Implemented a category routing feature, enabling users to filter news articles based on their preferences, such as technology, sports,science, entertainment.
-    \item Enabled real-time updates of news articles, automatically fetching new data at regular intervals to provide users with the most up-to-date content.
+\begin{itemize}  
+\item Built a real-time chat app using MERN, Socket.io, and Zustand, supporting 1,000+ users with zero message lag and 100\% real-time status tracking 
+\item Secured 100\% of user sessions with JWT authentication, reducing unauthorized logins by 98\% and improving data privacy
+\item Optimized backend performance, cutting crashes by 40\%, downtime by 30\%, and maintaining 99.9\% uptime  
 \end{itemize}
-{\textbf{TextUtils}} \hfill July 2023 \\
+{\textbf{Evogym}}\\
 \vspace{-1mm}
-\url{https://github.com/Shubhkesarwani02/react-textutils/} \\
+\url{https://github.com/Shubhkesarwani02/evogym/}\\
 \vspace{-2mm}
-\begin{itemize} 
-	\item This project is a React-based web application for text manipulation and analysis with both a light and dark mode feature.
- \item Implemented a wide range of text manipulation features including text case conversion, remove extra spaces, clear text, word and characters count.
-  \item Ensured that the application was responsive, adapting seamlessly to various screen sizes and orientations.
-\end{itemize}
-{\textbf{DoggoFetch}} \hfill June 2023 \\
+\begin{itemize}  
+\item Developed a fitness platform for 1,000+ users, automating workout tracking, progress analytics, and class scheduling, increasing engagement by 45\%
+\item Built a React and TypeScript front end, integrating real-time logs, dashboards, and AI recommendations, boosting user interaction by 40\% 
+\item Improved user retention by 30\% by designing an intuitive UI with categorized workouts and community discussion forums 
+\end{itemize}  
+{\textbf{Sound Sphere}}\\
 \vspace{-1mm}
-\url{https://github.com/Shubhkesarwani02/js-doggo-fetch/} \\
+\url{https://github.com/Shubhkesarwani02/sound-sphere/} \\
 \vspace{-2mm}
-\begin{itemize} 
-    \item This project is an interactive web-based game that challenges users to guess the name of a dog based on an image fetched from an external API source.
-     \item Technologies used : Utilized HTML to structure the game interface with basic custom CSS and Leveraged JavaScript to implement game logic and interactivity.
-\end{itemize}
-% {\textbf{File Drawer}} \hfill July 2022 \\
-% \vspace{-2mm}
-% \url{https://github.com/harshh2002/file-drawer.git} \\
-% \vspace{-2mm}
-% \begin{itemize} 
-% 	\item This project is the basic application of back-end using Node.js and express along with usage of get and post requests. File Drawer currently creates a server to upload files from clients locally.
-% \end{itemize}
-
+\begin{itemize}  
+\item Created an e-commerce platform using React and Tailwind CSS, managing 50+ products with instant search, one-click checkout, and adaptive UI
+\item Boosted page load speed by 40\% using lazy loading, optimized API calls, and asset management, reducing bounce rate by 35\%
+\item Increased conversion rates by 25\% with predictive search, frictionless cart, and streamlined checkout, lowering abandonment by 30\%  
+\end{itemize} 
 
 \header{Skills}
 \vspace{2mm}
 \begin{tabular}{ l l }
-	Programming Languages: &  C++ ,C\\
-	% Cloud Platforms:        & AWS , Google Cloud  \\
-	% Devops Tools:  & Docker, Kubernetes, GitHub (with Github Actions), GitLab, Git \\
-	% Database Management Systems: & MySQL , PostgreSQL, MongoDB \\ 
-	Web Development:       & HTML , CSS (Bootstrap) , JavaScript   \\
-	Libraries / Frameworks: & ReactJs        \\
-	% Tech Stacks:             & MERN Stack (MongoDb , ExpressJs, ReactJs, NodeJs) \\
-IT Constructs :           &  Data Structures and Algorithms, Object Oriented Programming  \\
-	Soft Skills:           &  Leadership, Communication Skills, Organised  \\
-	
+    \textbf{Languages:} & C++, C, JavaScript, Typescript, HTML, CSS, Python \\
+    \textbf{Certifications:} & Accenture, Tata, Amazon Web Services Virtual Experience Programme, Flipkart Grid 6.0 L1 \\
+    \textbf{Frameworks:} & Tailwind CSS, Material UI, Bootstrap, React.js, Node.js, OOPS \\
+    \textbf{Tech Domain:} & Web Development, Competitive Programming, Data Structures, and Algorithms \\
+    \textbf{Git Tools:} & Git, GitHub (with GitHub Actions) \\
 \end{tabular}
 
 
-% \vspace{2mm}
-% \header{Achievements}
-% \textbf{Winner} \hfill GDSC IIIT Bhopal\\
-% Won first prize in Web Development Week ReactJs quiz contest conducted by GDSC IIIT Bhopal.\\
-% {\textit {Skills Used: ReactJs}}  \hfill 2022\\
 
-\textbf{Tech Competition} \hfill NIIMACK IIIT Bhopal\\
-I was in top 25 in Edge'23 Tech Competition associated with KIMO, a Dutch Company conducted by IIIT Bhopal.\\
-{\textit {Skills Used: Programming, Artificial Intelligence}}  \hfill 2023\\
+\vspace{2mm}
+\header{Hobbies and Position of Responsibility}
 
-% \vspace{2mm}
-% \header{Hobbies and Interests}
-% I enjoy playing football, cricket and watching movies as my hobbies.\\
-% I have a keen interest in both sports and technology.\\
+\begin{itemize}
+    \item Competitive Programming(C++), Team Sports(Football), Mobile games
+    \item Supported event organization and promotion for Arunoday Club, IIIT Bhopal
+    \item Served as School Captain at Bhavan’s Mehta Vidyashram
+\end{itemize}
 
 \end{document}
